--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -1,5 +1,8 @@
 .colaborador {
     width: 280px;
+    position: relative;
+    display: inline-block;
+    padding: 10px;
 }
 
 .colaborador .cabecalho {
@@ -11,6 +14,7 @@
     border-radius: 50%;
     position: relative;
     bottom: -50px;
+
 }
 
 .colaborador .rodape {
@@ -34,4 +38,10 @@
     line-height: 22px;
     color: #212121;
     padding: 0 16px;
+}
+
+.deletar {
+    position: absolute;
+    right: -10px;
+    top: -10px;
 }
