--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -2,7 +2,7 @@
     text-align: center;
     padding: 32px;
     background-color: #D9F7E9;
-
+    position: relative;
 }
 
 .time h3 {
@@ -19,3 +19,8 @@
     flex-wrap: wrap;
 }
 
+.input-cor {
+    position: absolute;
+    top: 20px;
+    right: 50px;
+}
